fix menu alignment on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -493,6 +493,9 @@ footer {
         padding-right: 20px;
       }
     }
+    .site-links {
+      line-height: 120px;
+    }
     // .mobile-menu {
     //   display: block;
     //   line-height: 120px;
